# 2d-pointcloud

AutoMultRegistration/: CMakeLists.txt
AutoMultRegistration/include/: angleRegister2d.h  dbkdtree.h
AutoMultRegistration/src/: angleRegister2d.cpp  dbkdtree.cpp  multiRegistration.cpp  t_main.cpp
MMregistration/: CMakeLists.txt
MMregistration/include/: dbtype.h  multiRegistration.h
MMregistration/src/: ManualMultRegistration.cpp
